force-app/main/default/objects/index_value__mdt/index_value__mdt.object-meta.xml
<CustomObject>
    <label>indexvalue</label>
    <pluralLabel>indexvalues</pluralLabel>
</CustomObject>