force-app/main/default/objects/index_value__mdt/fields/actionName__c.field-meta.xml
<CustomField>
    <fullName>actionName__c</fullName>
    <label>actionName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>