force-app/main/default/objects/index_value__mdt/fields/apiName__c.field-meta.xml
<CustomField>
    <fullName>apiName__c</fullName>
    <label>apiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>