force-app/main/default/objects/index_value__mdt/fields/Discription__c.field-meta.xml
<CustomField>
    <fullName>Discription__c</fullName>
    <label>Discription</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>