force-app/main/default/objects/index_value__mdt/fields/Download__c.field-meta.xml
<CustomField>
    <fullName>Download__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Download</label>
    <type>Checkbox</type>
</CustomField>