force-app/main/default/objects/index_value__mdt/fields/DownloadURL__c.field-meta.xml
<CustomField>
    <fullName>DownloadURL__c</fullName>
    <label>DownloadURL</label>
    <type>Url</type>
</CustomField>