force-app/main/default/objects/index_value__mdt/fields/objectApiName__c.field-meta.xml
<CustomField>
    <fullName>objectApiName__c</fullName>
    <label>objectApiName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>