force-app/main/default/objects/index_value__mdt/fields/RunURL__c.field-meta.xml
<CustomField>
    <fullName>RunURL__c</fullName>
    <label>RunURL</label>
    <type>Url</type>
</CustomField>