force-app/main/default/objects/index_value__mdt/fields/viewCount__c.field-meta.xml
<CustomField>
    <fullName>viewCount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>viewCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>