force-app/main/default/objects/index_value__mdt/listViews/Meta_data.listView-meta.xml
<ListView>
    <fullName>Meta_data</fullName>
    <columns>Discription__c</columns>
    <columns>Download__c</columns>
    <columns>Run__c</columns>
    <columns>type__c</columns>
    <columns>actionName__c</columns>
    <columns>apiName__c</columns>
    <columns>Category__c</columns>
    <columns>DownloadURL__c</columns>
    <columns>objectApiName__c</columns>
    <columns>RunURL__c</columns>
    <columns>viewCount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Meta_data</label>
</ListView>